// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button with letters 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    >
      test letters
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle in state equal :changing 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   changing"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle in state equal :default 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle in state equal :modified 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   modified"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle with head 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head string"
    data-cy="circle-head"
  >
    test text
  </div>
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle with index 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    0
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle with isSmall ===  true 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle  small default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle with react in head 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  >
    <div
      className="content "
      data-cy="circle"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="circle-head"
      />
      <div
        className="circle   default"
        data-cy="circle-border"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-cy="circle-text"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="circle-tail"
      />
    </div>
  </div>
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;

exports[`circle with react in tail 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  >
    <div
      className="content "
      data-cy="circle"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="circle-head"
      />
      <div
        className="circle   default"
        data-cy="circle-border"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-cy="circle-text"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="circle-tail"
      />
    </div>
  </div>
</div>
`;

exports[`circle with tail 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-cy="circle-tail"
  >
    test text
  </div>
</div>
`;

exports[`circle without letter 1`] = `
<div
  className="content "
  data-cy="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="circle-head"
  />
  <div
    className="circle   default"
    data-cy="circle-border"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="circle-text"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="circle-tail"
  />
</div>
`;
